added vendors and README

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
     <div id="details"></div>
 
     <script src="mustache.js" charset="utf-8"></script>
-    <script src="jquery-1.11.0.min.js" charset="utf-8"></script>
-    <script src="underscore.js" charset="utf-8"></script>
-    <script src="backbone.js" charset="utf-8"></script>
+    <script src="vendors/jquery.js" charset="utf-8"></script>
+    <script src="vendors/underscore.js" charset="utf-8"></script>
+    <script src="vendors/backbone.js" charset="utf-8"></script>
     <script src="client.js" charset="utf-8"></script>
   </body>
 </html>
